--- a/第一章.md
+++ b/第一章.md
@@ -4,7 +4,7 @@
 - 印尼的人类成了“索罗人”
 - 东亚的人类成了“直立人”
 
-### 在漫长的进化过程中，脑容量并不是越大越好
+### 在漫长的进化过程中，脑容量并不是越大越好
 - 脑容量的增大，意味着身体需要的负担会越来越重，研究表明，人类静坐时战身体总重量2%~3%的大脑要消耗25%的能量，而人类的近亲黑猩猩的这个数字是8%。所以脑容量变大的对远古人的代价就是，
 
      - 需要更多的时间来寻找食物
