--- a/第一章.md
+++ b/第一章.md
@@ -18,18 +18,18 @@
 ### 智人统治世界的猜想
 - 大约15万年前，智人在东非出现。
 - 大约7万年前，智人从东非扩张到阿拉伯半岛，之后很快席卷整个欧亚大陆。
-- 在这段时间内，中东和欧洲有尼安特人，印尼有索罗人，东亚有直立人。这些不同的人种不仅仅是现在的白人和黑人的区别这么简单，更像世界上有很多不同种类的猴子不同种类的狐狸这种区别。
+- 在这段时间内，中东和欧洲有尼安特人，印尼有索罗人，东亚有直立人。这些不同的人种不仅仅是现在的白人和黑人的区别这么简单，更像世界上有很多不同种类的猴子不同种类的狐狸这种区别。
 - 而且，尼安特人相比于智人，他们有更大的脑容量，更强健的体魄。
 - 一种猜想是，智人在一次偶然的突变后，具备了“说谎”的能力，可以称之为想象能力，意味着他们可以创造出世界上不存在的东西，比如从德国施泰德洞穴发现的“狮人”雕像，意味着宗教的出现，意味着社会等级的出现。这像能力提高了智人之间合作的能力，而且是陌生人合作的能力，提高了一个团体的生存能力。
 
 ### 讲故事的能力
-- 这其实是一个很大的概念，俗称“洗脑”，举个简单的例子，其实国家本身是不存在的，但是统治者会告诉被统治的“公民”国家是什么，这样做的结果使得在统治者认定的范围内的人有着相似的信仰和价值观，这种价值观和信仰的灌输对维护社会稳定和发展极其重要的。在极端情况下，在外族侵犯国家存亡之际，就会有很多“有志之士”奋起反抗，来维护“国家”这个本来不存在的东西。
+- 这其实是一个很大的概念，俗称“洗脑”，举个简单的例子，其实国家本身是不存在的，但是统治者会告诉被统治的“公民”国家是什么，这样做的结果使得在统治者认定的范围内的人有着相似的信仰和价值观，这种价值观和信仰的灌输对维护社会稳定和发展极其重要的。在极端情况下，在外族侵犯国家存亡之际，就会有很多“有志之士”奋起反抗，来维护“国家”这个本来不存在的东西。
 
 - 不仅仅是国家，宗教，法律种种种种社会现存的制度，都是人们想象出来的，而且大多数人对其有信仰，使得数以百计的陌生人会合力行事，向着共同的目标努力，这对人类社会发展有着巨大的意义
 
-- 从封建社会的“君权神授”到现在的“人民做主”，其实都是统治者讲故事的方式不同，但是只要人们都信即可。这种讲故事的能力强弱决定了统治着的统治是否稳定。对智人来说，这种“讲故事”和“信仰”的形成，使得他们从“基因演化”进步到了“文化演化”的快车道，走上这条快车道之后，智人的合作能力一日千里，很快就远远甩掉了其他所有人类和动物物种。
+- 从封建社会的“君权神授”到现在的“人民做主”，其实都是统治者讲故事的方式不同，但是只要人们都信即可。这种讲故事的能力强弱决定了统治者的统治是否稳定。对智人来说，这种“讲故事”和“信仰”的形成，使得他们从“基因演化”进步到了“文化演化”的快车道，走上这条快车道之后，智人的合作能力一日千里，很快就远远甩掉了其他所有人类和动物物种。
 
-- 这种认知的革命使得人类的社会结构、人际交往关系和经济活动的改变在很短的时间内就可以完成。比如说“发过大革命”，中国1912到1949年不到50年又封建社会转到了社会主义社会，这种社会结构短时间的巨大演变在动物间是需要漫长的自然选择的。
+- 这种认知的革命使得人类的社会结构、人际交往关系和经济活动的改变在很短的时间内就可以完成。比如说“发过大革命”，中国1912到1949年不到50年又封建社会转到了社会主义社会，这种社会结构短时间的巨大演变在动物间是需要漫长的自然选择的。
 
 - 认知革命的影响
 
