--- a/第一章.md
+++ b/第一章.md
@@ -29,7 +29,7 @@
 
 - 从封建社会的“君权神授”到现在的“人民做主”，其实都是统治者讲故事的方式不同，但是只要人们都信即可。这种讲故事的能力强弱决定了统治者的统治是否稳定。对智人来说，这种“讲故事”和“信仰”的形成，使得他们从“基因演化”进步到了“文化演化”的快车道，走上这条快车道之后，智人的合作能力一日千里，很快就远远甩掉了其他所有人类和动物物种。
 
-- 这种认知的革命使得人类的社会结构、人际交往关系和经济活动的改变在很短的时间内就可以完成。比如说“发过大革命”，中国1912到1949年不到50年又封建社会转到了社会主义社会，这种社会结构短时间的巨大演变在动物间是需要漫长的自然选择的。
+- 这种认知的革命使得人类的社会结构、人际交往关系和经济活动的改变在很短的时间内就可以完成。比如说“发过大革命”，中国1912到1949年不到50年又封建社会转到了社会主义社会，这种社会结构短时间的巨大演变在动物间是需要漫长的自然选择的。
 
 - 认知革命的影响
 
