第一章完结

--- a/第一章.md
+++ b/第一章.md
@@ -39,4 +39,4 @@
 |八卦|能够传达更大量关于智人社会关系的信息|阻止更大、更有凝聚力的团体、规模可达150人|
 |虚拟故事|能够传达关于虚拟概念的信息，例如部落的守护神、国家、有限公司以及人权|1，大量陌生人之间的合作 2社会行为的快速创新|
 
-- 事实上，在这项能力出现之前，人类的行为可以全部归到“生物学”的范畴，而之后这一部分就要脱离出来归到“历史学”和“社会”之中。
+- 事实上，在这项能力出现之前，人类的行为可以全部归到“生物学”的范畴，而之后这一部分就要脱离出来归到“历史学”和“社会学”之中。
