--- a/第三章第四章.md
+++ b/第三章第四章.md
@@ -1,3 +1,4 @@
+# 亚当和夏娃的一天
 ### 天性不可避免
 - 喜欢油腻高热量的事物是过去几万年选择的结果
 - 女性喜欢强壮的男性，男性喜欢胸大的女性也是之前自然的选择基因“作祟”，强壮的男性的后代好生存，胸大的女性奶量足。🐶
@@ -14,8 +15,8 @@
 
 ### 人类一步一步爬上食物链顶端的过程，就是其他动物灭绝的过程
 
-- 从智人走出非洲之后，其他地方的“人类”就开始灭绝
-- 之后智人继续扩张，导致动物也开始灭绝，从东南亚到澳洲，从东亚到美洲，智人的长矛横扫了整个世界，所到之处，当地动植物都惨遭毒手，对当地环境的变革性影响可谓历史之最
+- 从智人走出非洲之后，其他地方的“人类”就开始灭绝
+- 之后智人继续扩张，导致动物也开始灭绝，从东南亚到澳洲，从东亚到美洲，智人的长矛横扫了整个世界，所到之处，当地动植物都惨遭毒手，对当地环境的变革性影响可谓历史之最
 - 人类对环境的影响可分为三个阶段
     - 认知革命，即智人的崛起并走出非洲
     - 农业革命
