--- a/第五章.md
+++ b/第五章.md
@@ -1,20 +1,20 @@
 # 史上最大的骗局
-### 农业革命是农作物的胜利
+### 农业革命是农作物的胜利
 - 生存和繁殖是最基本的演化标准
-- 农业革命使农作物的身影遍布全球，而人类只能依附于农作物生存，为农作物无时不刻提供最好的生存环境。而人类自己生存技能下降，只能依附于农作物生存，而且很多地区依附于一种农作物，贫农的生存环境其实是很恶劣的。
+- 农业革命使农作物的身影遍布全球，而人类只能依附于农作物生存，为农作物无时不刻提供最好的生存环境。而人类自己生存技能下降，只能依附于农作物生存，而且很多地区依附于一种农作物，贫农的生存环境其实是很恶劣的。
 - 农业革命的本质，让更多的人糟糕的活下去
 
 ### 大多数时候我们无法预料当时的抉择对以后的结果会有何种影响
 
 - 人类的进步不发倒退，从采集到农业，人类的生产力和生产关系在进步，但是人类的生存并没有变得轻松。但在这个“不轻松”的结果呈现之前的几千年中，人类并没有觉得这种进步导致的结果是“退步”的
-- 现在高速的社会节奏，促使人们越来越焦躁，越来越失去耐心，但回归孤云野鹤的生活并不是人类的主流。我们的主流思想依旧是在已经形成的这个大环境（社会阶级）下去获取更多的社会资源。而且这个目标的初衷只是为了更好的生活，但结果是，我们更努力更辛苦的工作，但结果并不一定是想要的。
+- 现在高速的社会节奏，促使人们越来越焦躁，越来越失去耐心，但回归孤云野鹤的生活并不是人类的主流。我们的主流思想依旧是在已经形成的这个大环境（社会阶级）下去获取更多的社会资源。而且这个目标的初衷只是为了更好的生活，但结果是，我们更努力更辛苦的工作，但结果并不一定是想要的。
 就想远古采集部落的人们，把小麦种植到自己住的地方，就可以不必翻山越岭去寻找食物，但最后的结果是几千年后的农民“锄禾日当午，汗滴禾下土”。
 
 ### 革命的受害者
 - 农业革命的受害者不仅仅是人类本身，还有被驯化的家畜。
 
     - 羊的驯化过程人们会阉掉公羊或者直接杀掉烈性的羊，这样通过长时间的“人为”选择，羊的性子就越来越温顺；
-    - 奶牛的驯化过程，为了让奶牛长时间产奶，人们会让母牛不断的受精，生下的小牛来让母牛不断的产奶，而出生的小牛有的会直接杀死；有的会让小牛和母牛接触产生障碍，比如给小牛嘴巴上戴一个刺圈，只要小牛喝奶，就会刺痛母牛，从而防止小牛“抢夺”人类的奶；还有甚至会杀死小牛后把小牛的皮囊塞满东西，放到母牛跟前刺激母牛产奶。可谓无所不用其极
+    - 奶牛的驯化过程，为了让奶牛长时间产奶，人们会让母牛不断的受精，生下的小牛来让母牛不断的产奶，而出生的小牛有的会直接杀死；有的会让小牛和母牛接触产生障碍，比如给小牛嘴巴上戴一个刺圈，只要小牛喝奶，就会刺痛母牛，从而防止小牛“抢夺”人类的奶；还有甚至会杀死小牛后把小牛的皮囊塞满东西，放到母牛跟前刺激母牛产奶。可谓无所不用其极
     - 猪的驯化过程，会直接砍掉猪的鼻子防止它野外生存，或者挖掉眼睛。
 
 - 人类的进步是建立在其他物种的痛苦之上的
