--- a/第六章.md
+++ b/第六章.md
@@ -1,4 +1,4 @@
-# 改期金字塔
+# 盖起金字塔
 ### 农业革命之后的农民
 - 农业革命使得人们对时间有个更大的概念，更深刻的认识到日出而作日落而息和春耕秋收的时间周期，也是人们无时不刻在关心未来的事情，比如明天是否会下雨，今年是否会有天灾等等
 - 人类的历史只有少数人书写，整个有史书记载的人类历史大多数不是农民，而历史上有90%的是时时刻刻在田地里耕耘的农民，这部分农民养活了10%的精英阶层，国王、官员、战士、牧师、艺术家。
